quarkus refactoring